--- a/symapp/.env
+++ b/symapp/.env
@@ -24,7 +24,8 @@ APP_SECRET=ee528629c8a0ef81bed342b3e84d28ae
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN=enqueue://default?topic[transport]=messages&queue[transport]=messages
+MESSENGER_TRANSPORT_DSN=enqueue://default?topic['name'=>'transport']=messages&queue[transport]=messages
+MESSENGER_CONSUMER_NAME='transport'
 KAFKA_BROKER_LIST=kafka-1:9092
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
