--- a/symapp/.env
+++ b/symapp/.env
@@ -24,8 +24,8 @@ APP_SECRET=ee528629c8a0ef81bed342b3e84d28ae
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN=enqueue://default?topic[name]=transport&queue[name]=transport
-MESSENGER_FAILURE_DSN=redis://redis:6379/messages/symfony/producer?auto_setup=true&serializer=1&stream_max_entries=0&dbindex=0
+MESSENGER_TRANSPORT_DSN=enqueue://default?topic[name]=transport&topic[message.timeout.ms]=100&queue[name]=transport
+MESSENGER_FAILURE_DSN=redis://redis:6379/?auto_setup=true&stream_max_entries=0&dbindex=0
 KAFKA_BROKER_LIST=kafka:9092
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
