Added NodeJS application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - "6380:6379"
 
   php:
-    build: .
+    build: ./docker/php
     environment:
       - PHP_OPCACHE_VALIDATE_TIMESTAMPS=1
       - PHP_XDEBUG_MODE=${XDEBUG_MODE:-off}
@@ -72,6 +72,62 @@ services:
       - kafka
       - zookeeper
       - redis
+
+  node:
+    build: ./docker/node
+    working_dir: /var/www
+    volumes:
+      - ./nodeapp:/var/www:cached
+    depends_on:
+      - kafka
+      - zookeeper
+
+  # MongoDB: https://hub.docker.com/_/mongo/
+  mongo:
+    image: mongo:4.2
+
+  # Elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/7.10/docker.html
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
+    environment:
+      - http.host=0.0.0.0
+      - transport.host=localhost
+      - network.host=0.0.0.0
+      - "ES_JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true -Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    deploy:
+      resources:
+        limits:
+          memory: 1g
+  # Graylog: https://hub.docker.com/r/graylog/graylog/
+  graylog:
+    image: graylog/graylog:4.2
+    environment:
+      # CHANGE ME (must be at least 16 characters)!
+      - GRAYLOG_PASSWORD_SECRET=atrapalotechpeople
+      # Password: admin
+      - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+    entrypoint: /usr/bin/tini -- wait-for-it elasticsearch:9200 --  /docker-entrypoint.sh
+    restart: always
+    depends_on:
+      - mongo
+      - elasticsearch
+    ports:
+      # Graylog web interface and REST API
+      - 9097:9000
+      # Syslog TCP
+      - 1515:1515
+      # Syslog UDP
+      - 1515:1515/udp
+      # GELF TCP
+      - 12202:12202
+      # GELF UDP
+      - 12202:12202/udp
+
 
 volumes:
   zookeeper_data:
