--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -4,9 +4,9 @@
   "description": "NodeJS Kafka connector implementation",
   "main": "app.js",
   "dependencies": {
+    "graylog2": "^0.2.1",
     "kafkajs": "^2.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
